--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		<nav>
 			<a class="logotipo" href="#">Logotipo</a>
 			<div class="enlaces">
-				<a href="#">Inicio</a>
-				<a href="#">Galeria</a>
-				<a href="#">Contacto</a>
+				<a href="#">Portfolio</a>
+				<a href="#">Skill Set</a>
+				<a href="#">Experience</a>
+				<a href="#">Contact</a>
 				<button class="switch" id="switch">
 					<span><i class="fas fa-sun"></i></span>
 					<span><i class="fas fa-moon"></i></span>
@@ -27,45 +28,21 @@
 		<section class="grid">
 			<div class="card">
 				<img src="img/1.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
 			</div>
 			<div class="card">
-				<img src="img/2.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
+				<img src="img/1.png" alt="">
 			</div>
 			<div class="card">
-				<img src="img/3.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
+				<img src="img/1.png" alt="">
 			</div>
 			<div class="card">
-				<img src="img/4.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
+				<img src="img/1.png" alt="">
 			</div>
 			<div class="card">
-				<img src="img/5.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
+				<img src="img/1.png" alt="">
 			</div>
 			<div class="card">
-				<img src="img/6.png" alt="">
-				<div class="botones">
-					<a href="#" class="boton primario">Comprar</a>
-					<a href="#" class="boton secundario">Ver más</a>
-				</div>
+				<img src="img/1.png" alt="">
 			</div>
 		</section>
 	</div>
