--- a/index.html
+++ b/index.html
@@ -1,52 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Darkmode con Javascript</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet"> 
-	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="css/estilos.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="resetStyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="contenedor">
-		<nav>
-			<a class="logotipo" href="#">Logotipo</a>
-			<div class="enlaces">
-				<a href="#">Portfolio</a>
-				<a href="#">Skill Set</a>
-				<a href="#">Experience</a>
-				<a href="#">Contact</a>
-				<button class="switch" id="switch">
-					<span><i class="fas fa-sun"></i></span>
-					<span><i class="fas fa-moon"></i></span>
-				</button>
-			</div>
-		</nav>
+    <main class="main-container">
+        <section class="main-section">
+            <div class="menu">
 
-		<section class="grid">
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-			<div class="card">
-				<img src="img/1.png" alt="">
-			</div>
-		</section>
-	</div>
+            </div>
+            <div class="page">
 
-	<script src="js/main.js"></script>
+            </div>
+        </section>
+    </main>
+   <!--<div class="circle1"></div>--> 
+    <div class="circle2"></div>
 </body>
 </html>
