--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </section>
     </main>
-   <!--<div class="circle1"></div>--> 
-    <div class="circle2"></div>
+   <!--<div class="circle1"></div> <div class="circle2"></div>--> 
+   
 </body>
 </html>
