--- a/index.html
+++ b/index.html
@@ -1,25 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="resetStyle.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="resetStyle.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <main class="main-container">
-        <section class="main-section">
-            <div class="menu">
-                
+      <section class="main-section">
+        <div class="menu">
+          <div class="avatar-container">
+            <img
+              src="./images/download.jpg"
+              class="avatar-img"
+              alt=""
+              srcset=""
+            />
+            <p>Darlin Fabian</p>
+            <p>Web developer</p>
+          </div>
+          <div class="sidebar-links">
+            <ul class="navbar-links">
+              <li><a>About</a></li>
+              <li><a>Projects</a></li>
+              <li><a>Contact</a></li>
+              <li class="resume-btn blob white">
+                <a
+                  href="/static/media/resume.18f6782c.pdf"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Resume</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="page">
+          <div class="container">
+            <!-- <div class="box">
+              <img src="https://source.unsplash.com/1000x800" />
+              <span>CSS</span>
+            </div>-->
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x802" />
+              <span>Image</span>
             </div>
-            <div class="page">
-
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x804" />
+              <span>Hover</span>
             </div>
-        </section>
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x806" />
+              <span>Effect</span>
+            </div>
+          </div>
+          <div class="container">
+            <!-- <div class="box">
+              <img src="https://source.unsplash.com/1000x800" />
+              <span>CSS</span>
+            </div>-->
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x802" />
+              <span>Image</span>
+            </div>
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x804" />
+              <span>Hover</span>
+            </div>
+            <div class="box">
+              <img src="https://source.unsplash.com/1000x806" />
+              <span>Effect</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-   <!--<div class="circle1"></div> <div class="circle2"></div>--> 
-   
-</body>
+    <!--<div class="circle1"></div> <div class="circle2"></div>-->
+  </body>
 </html>
