--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
           </div>
         </div>
         <div class="page">
-          <div class="about">about</div>
+          <div class="about">
+            LENGUAJES DE PROGRAMACIÓN: JAVASCRIPT C# DISEÑO WEB: CSS3 HTML5
+            REACTJS BOOTSTRAP MATERIAL-UI IDIOMAS: INGLES FRAMEWORKS: Angular
+            .NET CORE ENTITY FRAMEWORK BASE DE DATOS: SQL SERVER MOVIL: REACT
+            NATIVE
+          </div>
           <div class="projects show-categories">
             <div class="container">
               <!-- <div class="box">
