--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="resetStyle.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="bubblesStyles.css" />
   </head>
   <body>
     <main class="main-container">
@@ -31,7 +32,7 @@
           </div>
           <div class="sidebar-links">
             <ul class="navbar-links">
-              <li><a id="about">About</a></li>
+              <li><a id="about">Skills</a></li>
               <li><a id="projects" class="link-select">Projects</a></li>
               <li><a id="contact">Contact</a></li>
               <li class="resume-btn">
@@ -48,10 +49,44 @@
         </div>
         <div class="page">
           <div class="about">
-            LENGUAJES DE PROGRAMACIÓN: JAVASCRIPT C# DISEÑO WEB: CSS3 HTML5
-            REACTJS BOOTSTRAP MATERIAL-UI IDIOMAS: INGLES FRAMEWORKS: Angular
-            .NET CORE ENTITY FRAMEWORK BASE DE DATOS: SQL SERVER MOVIL: REACT
-            NATIVE
+            <div class="abaut-container">
+              <div>
+                <p>Programming Languages:</p>
+                <ul>
+                  <li>JAVASCRIPT</li>
+                  <li>C#</li>
+                </ul>
+                <p>Web design:</p>
+                <ul>
+                  <li>CSS3</li>
+                  <li>HTML5</li>
+                  <li>REACTJS</li>
+                  <li>BOOTSTRAP</li>
+                  <li>MATERIAL-UI</li>
+                </ul>
+                <p>FRAMEWORKS:</p>
+                <ul>
+                  <li>Angular</li>
+                  <li>.NET CORE</li>
+                  <li>ENTITY FRAMEWORK</li>
+                </ul>
+              </div>
+              <div>
+                <p>Database:</p>
+                <ul>
+                  <li>SQL SERVER</li>
+                </ul>
+                <p>MOVIL:</p>
+                <ul>
+                  <li>REACT NATIVE</li>
+                </ul>
+                <p>Languages:</p>
+                <ul>
+                  <li>English</li>
+                  <li>Spanish</li>
+                </ul>
+              </div>
+            </div>
           </div>
           <div class="projects show-categories">
             <div class="container">
@@ -91,10 +126,91 @@
               </div>
             </div>
           </div>
-          <div class="contact">contact</div>
+          <div class="contact">
+            <div>
+              <h2>social network</h2>
+              <a
+                href="https://github.com/darlinf"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/git.svg"
+                  alt="Github"
+                  class="sc-fBuWsC cIDJzp" /></a
+              ><a
+                href="mailto:darlinfabianleyba@gmail.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/mail.svg"
+                  alt="Mail"
+                  class="sc-fBuWsC cIDJzp" /></a
+              ><a
+                href="https://www.linkedin.com/in/sureshmurali29"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./images/linkedin.svg"
+                  alt="Linkedin"
+                  class="sc-fBuWsC cIDJzp"
+              /></a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <div class="bubbles">
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+      <div class="bubble"></div>
+    </div>
     <!--<div class="circle1"></div> <div class="circle2"></div>-->
     <script src="./main.js"></script>
   </body>
