background elements works

--- a/index.html
+++ b/index.html
@@ -88,56 +88,7 @@
               </div>
             </div>
           </div>
-          <div class="projects show-categories">
-            <div class="container">
-              <!-- <div class="box">
-              <img src="https://source.unsplash.com/1000x800" />
-              <span>CSS</span>
-            </div>-->
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Portal proyectos</span>
-              </div>
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Express tickets</span>
-              </div>
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Shop</span>
-              </div>
-            </div>
-            <div class="container">
-              <!-- <div class="box">
-              <img src="https://source.unsplash.com/1000x800" />
-              <span>CSS</span>
-            </div>-->
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Todo list</span>
-              </div>
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Multiple coundows</span>
-              </div>
-              <div class="box">
-                <img
-                  src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-                />
-                <span>Restauran</span>
-              </div>
-            </div>
-          </div>
+
           <div class="contact">
             <div>
               <h2>Social network</h2>
@@ -170,7 +121,49 @@
           </div>
         </div>
       </section>
+      <div id="projectZIndex" class="projects show-categories fff">
+        <div class="container">
+          <div class="box box-z-indez" id="box1">
+            <img
+              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+            />
+            <span>Portal proyectos</span>
+          </div>
+          <div class="box" id="box2">
+            <img
+              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+            />
+            <span>Express tickets</span>
+          </div>
+          <div class="box" id="box3">
+            <img src="./images/portar proyecto.png" />
+            <span>Shop</span>
+          </div>
+        </div>
+        <div class="container">
+          <div class="box" id="box4">
+            <img
+              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+            />
+            <span>Todo list</span>
+          </div>
+          <div class="box" id="box5">
+            <img
+              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+            />
+            <span>Multiple coundows</span>
+          </div>
+          <div class="box" id="box6">
+            <img
+              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+            />
+            <span>Restauran</span>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <!--
     <div class="bubbles">
       <div class="bubble"></div>
       <div class="bubble"></div>
@@ -222,7 +215,7 @@
       <div class="bubble"></div>
       <div class="bubble"></div>
       <div class="bubble"></div>
-    </div>
+    </div>-->
     <!--<div class="circle1"></div> <div class="circle2"></div>-->
     <script src="./main.js"></script>
   </body>
