--- a/index.html
+++ b/index.html
@@ -123,37 +123,37 @@
       </section>
       <div id="projectZIndex" class="projects show-categories fff">
         <div class="container">
-          <div class="box box-z-indez" id="box1">
+          <div class="box">
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Portal proyectos</span>
           </div>
-          <div class="box" id="box2">
+          <div class="box">
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Express tickets</span>
           </div>
-          <div class="box" id="box3">
+          <div class="box">
             <img src="./images/portar proyecto.png" />
             <span>Shop</span>
           </div>
         </div>
         <div class="container">
-          <div class="box" id="box4">
+          <div class="box">
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Todo list</span>
           </div>
-          <div class="box" id="box5">
+          <div class="box">
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Multiple coundows</span>
           </div>
-          <div class="box" id="box6">
+          <div class="box">
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
@@ -163,7 +163,6 @@
       </div>
     </main>
 
-    <!--
     <div class="bubbles">
       <div class="bubble"></div>
       <div class="bubble"></div>
@@ -215,7 +214,7 @@
       <div class="bubble"></div>
       <div class="bubble"></div>
       <div class="bubble"></div>
-    </div>-->
+    </div>
     <!--<div class="circle1"></div> <div class="circle2"></div>-->
     <script src="./main.js"></script>
   </body>
