--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         </div>
         <div class="container">
           <div class="box">
+            <p>
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
