finally project details works

--- a/index.html
+++ b/index.html
@@ -124,40 +124,360 @@
       <div id="projectZIndex" class="projects show-categories fff">
         <div class="container">
           <div class="box">
+            <p class="project-description1">
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
+            <div class="project-buttons">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Portal proyectos</span>
           </div>
           <div class="box">
+            <p class="project-description2">
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
+            <div class="project-buttons">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Express tickets</span>
           </div>
           <div class="box">
+            <p class="project-description3">
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
+            <div class="project-buttons">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img src="./images/portar proyecto.png" />
             <span>Shop</span>
           </div>
         </div>
         <div class="container">
           <div class="box">
-            <p>
+            <p class="project-description4">
               This is an application for the management of end-of-degree
               projects for students
             </p>
+            <div class="project-buttons project-buttons-down">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Todo list</span>
           </div>
           <div class="box">
+            <p class="project-description5">
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
+            <div class="project-buttons project-buttons-down">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Multiple coundows</span>
           </div>
           <div class="box">
+            <p class="project-description6">
+              This is an application for the management of end-of-degree
+              projects for students
+            </p>
+            <div class="project-buttons project-buttons-down">
+              <div>
+                <a
+                  href="https://github.com/EmanuelTejada032/commercejs"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Github</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <a
+                  href="https://shopping-cart.emanueltejada.site/"
+                  rel="noreferrer"
+                  target="_blank"
+                  class="project-button"
+                  >Live</a
+                ><svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                  ></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </div>
+            </div>
             <img
               src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
