--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="resetStyle.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="bubblesStyles.css" />
+    <link rel="stylesheet" href="asset/css/resetStyle.css" />
+    <link rel="stylesheet" href="asset/css/style.css" />
+    <link rel="stylesheet" href="asset/css/bubblesStyles.css" />
   </head>
   <body>
     <main class="main-container">
@@ -22,7 +22,7 @@
         <div class="menu nav__nav">
           <div class="avatar-container">
             <img
-              src="./images/download.jpg"
+              src="asset/images/download.jpg"
               class="avatar-img"
               alt=""
               srcset=""
@@ -38,7 +38,7 @@
               <li class="resume-btn">
                 <a
                   class="blob white"
-                  href="./curriculum2.pdf"
+                  href="asset/pdf/curriculum.pdf"
                   target="_blank"
                   rel="noreferrer"
                   >Resume</a
@@ -97,7 +97,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/git.svg"
+                  src="asset/images/git.svg"
                   alt="Github"
                   class="sc-fBuWsC cIDJzp" /></a
               ><a
@@ -105,7 +105,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/mail.svg"
+                  src="asset/images/mail.svg"
                   alt="Mail"
                   class="sc-fBuWsC cIDJzp" /></a
               ><a
@@ -113,7 +113,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./images/linkedin.svg"
+                  src="asset/images/linkedin.svg"
                   alt="Linkedin"
                   class="sc-fBuWsC cIDJzp"
               /></a>
@@ -179,7 +179,7 @@
               </div>
             </div>
             <img
-              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Portal proyectos</span>
           </div>
@@ -239,7 +239,7 @@
               </div>
             </div>
             <img
-              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Express tickets</span>
           </div>
@@ -298,7 +298,7 @@
                 </svg>
               </div>
             </div>
-            <img src="./images/portar proyecto.png" />
+            <img src="asset/images/portar proyecto.png" />
             <span>Shop</span>
           </div>
         </div>
@@ -359,7 +359,7 @@
               </div>
             </div>
             <img
-              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+              src="asset/images/Todo list.png"
             />
             <span>Todo list</span>
           </div>
@@ -419,7 +419,7 @@
               </div>
             </div>
             <img
-              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+              src="asset/images/Multiple coundows.png"
             />
             <span>Multiple coundows</span>
           </div>
@@ -479,7 +479,7 @@
               </div>
             </div>
             <img
-              src="./images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
+              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
             />
             <span>Restauran</span>
           </div>
@@ -540,6 +540,6 @@
       <div class="bubble"></div>
     </div>
     <!--<div class="circle1"></div> <div class="circle2"></div>-->
-    <script src="./main.js"></script>
+    <script src="asset/js/main.js"></script>
   </body>
 </html>
