--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <li>ENTITY FRAMEWORK</li>
                 </ul>
               </div>
-              <div>
+              <div style="top: 15px">
                 <p>Database:</p>
                 <ul>
                   <li>SQL SERVER</li>
@@ -92,31 +92,35 @@
           <div class="contact">
             <div>
               <h2>Social network</h2>
-              <a
-                href="https://github.com/darlinf"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  src="asset/images/git.svg"
-                  alt="Github"
-                  class="sc-fBuWsC cIDJzp" /></a
-              ><a
-                href="mailto:darlinfabianleyba@gmail.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  src="asset/images/mail.svg"
-                  alt="Mail"
-                  class="sc-fBuWsC cIDJzp" /></a
-              ><a
-                href="https://www.linkedin.com/in/sureshmurali29"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img
-                  src="asset/images/linkedin.svg"
-                  alt="Linkedin"
-                  class="sc-fBuWsC cIDJzp"
-              /></a>
+              <div style="display: flex; justify-content: center">
+                <a
+                  class="githup"
+                  href="https://github.com/darlinf"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="asset/images/git.svg"
+                    alt="Github"
+                    class="sc-fBuWsC cIDJzp" /></a
+                ><a
+                  href="mailto:darlinfabianleyba@gmail.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="asset/images/mail.svg"
+                    alt="Mail"
+                    class="sc-fBuWsC cIDJzp" /></a
+                ><a
+                  class="linkedin"
+                  href="https://www.linkedin.com/in/sureshmurali29"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img
+                    src="asset/images/linkedin.svg"
+                    alt="Linkedin"
+                    class="sc-fBuWsC cIDJzp"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
@@ -126,17 +130,18 @@
           <div class="box">
             <p class="project-description1">
               This is an application for the management of end-of-degree
-              projects for students
+              projects for students.
             </p>
             <div class="project-buttons">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/darlinf-portar-proyectos_REACT-JS"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
                   >Github</a
-                ><svg
+                >
+                <svg
                   stroke="currentColor"
                   fill="none"
                   stroke-width="2"
@@ -178,20 +183,19 @@
                 </svg>
               </div>
             </div>
-            <img
-              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-            />
+            <img src="asset/images/portar proyecto.png" />
             <span>Portal proyectos</span>
           </div>
           <div class="box">
             <p class="project-description2">
-              This is an application for the management of end-of-degree
-              projects for students
+              This application tries to solve the new problems posed by the
+              current pandemic by allowing you to buy tickets for your trips
+              online.
             </p>
             <div class="project-buttons">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/express-tickets_ANGULAR"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
@@ -238,9 +242,7 @@
                 </svg>
               </div>
             </div>
-            <img
-              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-            />
+            <img src="asset/images/express_ticket.png" />
             <span>Express tickets</span>
           </div>
           <div class="box">
@@ -251,7 +253,7 @@
             <div class="project-buttons">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/shop_ANGULAR"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
@@ -305,13 +307,14 @@
         <div class="container">
           <div class="box">
             <p class="project-description4">
-              This is an application for the management of end-of-degree
-              projects for students
+              This is a life-long todo list application with the addition that
+              allows you to assign tasks to each moment of your day in such a
+              way that you will have total control of your time.
             </p>
             <div class="project-buttons project-buttons-down">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/todolist_REACT-NATIVE"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
@@ -358,20 +361,19 @@
                 </svg>
               </div>
             </div>
-            <img
-              src="asset/images/Todo list.png"
-            />
+            <img src="asset/images/Todo list.png" />
             <span>Todo list</span>
           </div>
           <div class="box">
             <p class="project-description5">
-              This is an application for the management of end-of-degree
-              projects for students
+              As its name indicates, this is an application with which you will
+              have multiple countdown which will allow you to be aware of events
+              that happen in parallel but that end in different periods of time.
             </p>
             <div class="project-buttons project-buttons-down">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/multiple-coundows"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
@@ -418,9 +420,7 @@
                 </svg>
               </div>
             </div>
-            <img
-              src="asset/images/Multiple coundows.png"
-            />
+            <img src="asset/images/Multiple coundows.png" />
             <span>Multiple coundows</span>
           </div>
           <div class="box">
@@ -431,7 +431,7 @@
             <div class="project-buttons project-buttons-down">
               <div>
                 <a
-                  href="https://github.com/EmanuelTejada032/commercejs"
+                  href="https://github.com/darlinf/Restauran_ANGULAR"
                   rel="noreferrer"
                   target="_blank"
                   class="project-button"
