--- a/index.html
+++ b/index.html
@@ -247,8 +247,9 @@
           </div>
           <div class="box">
             <p class="project-description3">
-              This is an application for the management of end-of-degree
-              projects for students
+              This is a virtual store with which you can register your items
+              with price, name and image. You can also manage the sales of items
+              with a shopping cart where you can see how many items you want.
             </p>
             <div class="project-buttons">
               <div>
@@ -300,7 +301,7 @@
                 </svg>
               </div>
             </div>
-            <img src="asset/images/portar proyecto.png" />
+            <img src="asset/images/shop.png" />
             <span>Shop</span>
           </div>
         </div>
@@ -425,8 +426,10 @@
           </div>
           <div class="box">
             <p class="project-description6">
-              This is an application for the management of end-of-degree
-              projects for students
+              With this web application you will be able to place your food
+              orders which will be registered and then they will appear in the
+              orders tab where you can edit or delete that order and if you are
+              satisfied with your order, proceed to pay.
             </p>
             <div class="project-buttons project-buttons-down">
               <div>
@@ -478,9 +481,7 @@
                 </svg>
               </div>
             </div>
-            <img
-              src="asset/images/Simulator Screen Shot - iPhone 12 - 2021-07-27 at 18.09.55.png"
-            />
+            <img src="asset/images/restaurant.png" />
             <span>Restauran</span>
           </div>
         </div>
