--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     class="sc-fBuWsC cIDJzp" /></a
                 ><a
                   class="linkedin"
-                  href="https://www.linkedin.com/in/sureshmurali29"
+                  href="https://www.linkedin.com/in/darlin-fabian-78a918199/"
                   target="_blank"
                   rel="noopener noreferrer"
                   ><img
