--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </div>
       </div>
     </main>
-
+<!--
     <div class="bubbles">
       <div class="bubble"></div>
       <div class="bubble"></div>
@@ -540,7 +540,7 @@
       <div class="bubble"></div>
       <div class="bubble"></div>
     </div>
-    <!--<div class="circle1"></div> <div class="circle2"></div>-->
+    <div class="circle1"></div> <div class="circle2"></div>-->
     <script src="asset/js/main.js"></script>
   </body>
 </html>
